--- a/deploy.yml
+++ b/deploy.yml
@@ -3,5 +3,5 @@
   gather_facts: no
   become: yes
   roles:
-    - { role: monitoring, tags: common/monitoring }
+    - { role: monitoring, tags: monitoring }
     - { role: tomcat-docker, tags: app}
